Fix: prevent overflow of popmenu text

--- a/htdocs/css/mympd.css
+++ b/htdocs/css/mympd.css
@@ -569,4 +569,5 @@ textarea.small {
 
 .popover {
   font-size: 1rem;
+  max-width: none;
 }
